[workspace]
members = [
  "facet-singularize",
  "facet-dom",
  "facet-xml",
  "facet-xml-node",
  "facet-atom",
  "facet-svg",
]
resolver = "3"

[workspace.package]
version = "0.44.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-xml"

[workspace.dependencies]
# Core facet crates from main repo
facet = { version = "0.44.0" }
facet-core = { version = "0.44.0" }
facet-reflect = { version = "0.44.0" }
facet-dessert = { version = "0.44.0" }
facet-json = { version = "0.44.0" }
facet-testhelpers = { version = "0.44.0" }
rediff = { version = "0.44.0" }

# Local workspace crates
facet-singularize = { path = "facet-singularize", version = "0.44.0" }
facet-dom = { path = "facet-dom", version = "0.44.0" }
facet-xml = { path = "facet-xml", version = "0.44.0" }
facet-xml-node = { path = "facet-xml-node", version = "0.44.0" }
facet-atom = { path = "facet-atom", version = "0.44.0" }
facet-svg = { path = "facet-svg", version = "0.44.0" }

# Shared dependencies
divan = "0.1.21"
indoc = "2.0.7"
owo-colors = "4.3.0"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
http = "1.4.0"

# Allow the facet_no_doc cfg in generated code
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }

# # Uncomment to develop
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "/Users/amos/bearcove/facet/facet" }
# facet-core = { path = "/Users/amos/bearcove/facet/facet-core" }
# facet-reflect = { path = "/Users/amos/bearcove/facet/facet-reflect" }
# facet-dessert = { path = "/Users/amos/bearcove/facet/facet-dessert" }
# facet-testhelpers = { path = "/Users/amos/bearcove/facet/facet-testhelpers" }
